--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  margin-top: auto;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 16px 8px;
 }
 
 .button-container {
+  margin-top: 8px;
+  padding: 8px;
+  text-align: center;
   background: #e3f4ff;
 }
 
 button {
   background: white;
+  display:block;
+  margin: 0 auto;
+  padding: 8px 24px;
   border: 1px solid #eee;
 }
