--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,12 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .profile-image {
@@ -20,6 +26,19 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  display: flex;
+}
+.user{
+  display: flex;
+  gap:16px;
+  justify-content: flex-end;
+}
+
+.right-side{
+  display: flex;
+  gap:16px;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .logo {
@@ -27,6 +46,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 16px;
 }
 
 button {
@@ -35,6 +55,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  justify-content: flex-end;
 }
 
 a {
@@ -45,4 +66,8 @@ a {
 
 ul {
   list-style-type: none;
+  margin:0;
+  padding: 0;
+  display: flex;
+  gap: 16px;
 }
