--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -17,7 +17,11 @@ body {
 
 .modal {
   background: white;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
   width: 480px;
+  padding: 18px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
@@ -31,10 +35,25 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
+  flex-shrink: 0;
   align-items: center;
   justify-content: center;
 }
 
+.text-box{
+  display: flex;
+  flex-direction: column;
+  padding: 0 0 0 18px;
+}
+.text{
+  padding: 12px 0 12px 0;
+}
+.header{
+  font-size: 18px;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
@@ -46,6 +65,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
 }
 
 button {
