--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,79 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
   height: 72px;
   background: darkmagenta;
   color: white;
 }
+.content{
+  flex-grow: 1;
+  display: flex;
+  justify-content:space-between;
 
+}
 .footer {
+  display: flex;
+  align-content: flex-end;
+  align-items: center;
+  justify-content: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
-
+.cards{
+  padding: 32px;
+  display: flex;
+  justify-content:space-around;
+  gap:10px;
+  flex-wrap: wrap;
+}
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+  flex-shrink: 0;
+  align-items: stretch;
+  flex-direction: column;
   width: 300px;
   background: royalblue;
+  padding: 16px;
 }
-
+ul{
+  padding: 0;
+}
 .card {
+  display: flex;
+  flex-direction: row;
+  align-content: space-around;
+  width: 400px;
+  height: auto;
+  flex-grow: 1;
+  font-size: 22px;
+  justify-content: space-between;
+  padding: 16px;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+a{
+  text-decoration: none;
+  color: #eee;
+}
+
+li{
+  list-style: none;
+  font-size: 24px;
 }
